# farm-pi

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Pipfile  README.md  conanfile.txt
include/: driver.hpp
include/device/: bme280.hpp  light.hpp  lm35dz.hpp  mcp3002.hpp  peltier.hpp  tsl2561.hpp
include/driver/: driver.hpp  gpio.hpp  i2c.hpp  spi.hpp
include/driver/device/: bme280.hpp  mcp3002.hpp  tsl2561.hpp
libs/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/device/: bme280.cpp  light.cpp  lm35dz.cpp  mcp3002.cpp  peltier.cpp  tsl2561.cpp
src/driver/: CMakeLists.txt  driver.cpp  gpio.cpp  i2c.cpp  pwm.cpp  spi.cpp
src/driver/device/: CMakeLists.txt  bme280.cpp  mcp3002.cpp  tsl2561.cpp
